discussion/kv_engine/184517/184517_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-20017: Add support for retrieving per-thread cpu usage

Use mcstat "threads details" or look in prometheus

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-05 14:34:35.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-05 15:02:26.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22352/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10: error: "sigar.h" file not found [clang-diagnostic-error]
#include <sigar.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/stats.cc:24:10: error: "sigar.h" file not found [clang-diagnostic-error]
#include <sigar.h>
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22352/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
error: "sigar.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22352/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51683/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/stats.cc(24): fatal error C1083: Cannot open include file: "sigar.h": No such file or directory ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51683/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43389/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43389/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12073/ : FAILURE

Compile error at [2023-01-05T14:54:34.096Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12073/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24819/ : FAILURE

Compile error at [2023-01-05T15:01:27.118Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24819/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25678/ : FAILURE

Compile error at [2023-01-05T14:59:11.453Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25678/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24396/ : FAILURE

Compile error at [2023-01-05T14:58:28.325Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/stats.cc:24:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24396/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12160/ : FAILURE

Compile error at [2023-01-05T14:48:17.406Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12160/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32815/ : FAILURE

Compile error at [2023-01-05T14:58:22.945Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32815/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23923/ : FAILURE

Compile error at [2023-01-05T14:52:14.939Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23923/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1115/ : FAILURE

Compile error at [2023-01-05T14:54:02.497Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/stats.cc:24:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1115/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21980/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
